--- a/registrese.html
+++ b/registrese.html
@@ -34,7 +34,7 @@
     </header>
 
     <section class="hero">
-            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+            <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Formulario de registro:</p>
 
             <form class="mx-1 mx-md-4 mt-5">
 
