new colours and navs

--- a/nuestros-clientes.html
+++ b/nuestros-clientes.html
@@ -48,7 +48,7 @@
                                 <a href="/registrese.html">Regístrese</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/nuestros-clientes.html">Nuestros Clientes</a>
+                                <a class="nav-link active" aria-current="page" href="/nuestros-clientes.html">Nuestros Clientes</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/contacto.html">Contacto</a>
