--- a/registrese.html
+++ b/registrese.html
@@ -45,7 +45,7 @@
                                 <a href="/sucursales.html">Sucursales</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/registrese.html">Regístrese</a>
+                                <a class="nav-link active" aria-current="page" href="/registrese.html">Regístrese</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/nuestros-clientes.html">Nuestros Clientes</a>
