--- a/acerca-de.html
+++ b/acerca-de.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/acerca-de.html">Acerca de</a>
+                                <a class="nav-link active" aria-current="page" href="/acerca-de.html">Acerca de</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/sucursales.html">Sucursales</a>
