--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
                             <li class="nav-item">
                                 <a href="/nuestros-clientes.html">Nuestros Clientes</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-link active" aria-current="page" class="nav-item">
                                 <a href="/contacto.html">Contacto</a>
                             </li>
                         </ul>
