--- a/sucursales.html
+++ b/sucursales.html
@@ -42,7 +42,7 @@
                                 <a href="/acerca-de.html">Acerca de</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/sucursales.html">Sucursales</a>
+                                <a class="nav-link active" aria-current="page" href="/sucursales.html">Sucursales</a>
                             </li>
                             <li class="nav-item">
                                 <a href="/registrese.html">Regístrese</a>
