--- a/acerca-de.html
+++ b/acerca-de.html
@@ -19,8 +19,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Electro-Hogar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                <a class="navbar-brand" href="/index.html">Electro-Hogar</a>                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,7 +34,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                                <a href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/acerca-de.html">Acerca de</a>
@@ -60,17 +59,26 @@
     </header>
 
     <section class="hero">
-        <div class="hero-text">
-            <h5>Electro - Hogar</h5>
-            <h4>Envíos a todo el país</h4>
-            <h1>Venta de electrodomésticos</h1>
-            <p>Tenemos todo lo que necesitás para tu hogar
-            </p>
-            <a href="#">VISITÁ NUESTRO E-SHOP</a>
-        </div>
 
         <div class="hero-img">
-            <img src="/assets/imgs/electrodomesticos-home.webp" alt="Foto de electrodomésticos">
+            <img src="/assets/imgs/electrodomésticos-home.jpg" alt="Foto de electrodomésticos">
+        </div>
+
+        <div class="hero-text p-5">
+            <h1>Nuestros productos</h1>
+            <ul>
+                <li>Electrodomesticos</li>
+                <li>Cocinas</li>
+                <li>Muebles</li>
+                <li>Complementos</li>
+                <li>Refrigeradores</li>
+                <li>Neveras</li>
+                <li>Lavadoras</li>
+                <li>Estufas</li>
+                <li>Heladeras</li>
+                <li>Microondas</li>
+                <li>Televisores</li>
+            </ul>    
         </div>
     </section>
 
