--- a/contacto.html
+++ b/contacto.html
@@ -61,55 +61,19 @@
     </header>
 
     <section class="hero">
-            <h1 class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Formulario de registro:</h1>
+            <h1 class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Contacto:</h1>
 
-            <form class="mx-1 mx-md-4 mt-5">
-
-                <div class="d-flex flex-row align-items-center mb-2">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Nombre</label>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-row align-items-center mb-2">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="email" id="form3Example3c" class="form-control" />
-                        <label class="form-label" for="form3Example3c">Email</label>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-row align-items-center mb-2">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4c" class="form-control" />
-                        <label class="form-label" for="form3Example4c">Password</label>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-row align-items-center mb-2">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                    <div data-mdb-input-init class="form-outline flex-fill mb-0">
-                        <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repetir password</label>
-                    </div>
-                </div>
-
-                <div class="form-check d-flex justify-content-center mb-3">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                    <label class="form-check-label" for="form2Example3">
-                        Acuerdo <a href="#!">Condiciones de servicio</a>
-                    </label>
-                </div>
-
-                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-primary btn-lg">Registrarse</button>
-                </div>
-
-            </form>
+            <ol>
+                <li>Telefono: 123-456-7890</li>
+                <li>Correo: 0wP8n@example.com</li>
+                <li>Ubicación: Calle Principal 123, Ciudad</li>
+                <li>Horario: Lunes a Viernes de 9:00 a.m. a 5:00 p.m.</li>
+                <li>Whatsapp: 123-456-7890</li>
+                <li>Facebook: @electrohogar</li>
+                <li>Instagram: @electrohogar</li>
+                <li>Twitter: @electrohogar</li>
+                <li>Linkedin: @electrohogar</li>
+            </ol>
         </div>
     </section>
 
