--- a/acerca-de.html
+++ b/acerca-de.html
@@ -60,14 +60,38 @@
 
     <section class="hero">
 
-        <div class="hero-img">
-            <img src="/assets/imgs/electrodomésticos-home.jpg" alt="Foto de electrodomésticos">
-        </div>
+            <img src="/assets/imgs/electrodomésticos-home.jpg" alt="Foto de electrodomésticos"> 
+            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="/assets/imgs/electrodomésticos-home.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/imgs/electrodomesticos-home.webp" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="/assets/imgs/GettyImages-1223005887-1101x458-d9e51cf.webp" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div> -->
 
         <div class="hero-text p-5">
-            <h1>Nuestros productos</h1>
+            <h4>Somos una empresa líder en la venta de electrodomésticos con mas de 20 años de experiencia en el mercado.</h4>
+            <h4>Nuestros productos:</h4>
             <ul>
-                <li>Electrodomesticos</li>
                 <li>Cocinas</li>
                 <li>Muebles</li>
                 <li>Complementos</li>
@@ -84,8 +108,8 @@
 
     <div class="icons">
         <a href="#"><i class="ri-instagram-line"></i></a>
-        <a href="#"><i class="ri-youtube-line"></i></a>
-        <a href="#"><i class="ri-github-fill"></i></a>
+        <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+        <a href="#"><i class='bx bxl-twitter'></i></a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
