--- a/contacto.html
+++ b/contacto.html
@@ -79,8 +79,8 @@
 
     <div class="icons">
         <a href="#"><i class="ri-instagram-line"></i></a>
-        <a href="#"><i class="ri-youtube-line"></i></a>
-        <a href="#"><i class="ri-github-fill"></i></a>
+        <a href="#"><i class='bx bxl-facebook-circle' ></i></a>
+        <a href="#"><i class='bx bxl-twitter'></i></a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
