--- a/acerca-de.html
+++ b/acerca-de.html
@@ -62,7 +62,7 @@
     <section class="hero">
 
         <!-- <img src="/assets/imgs/electrodomésticos-home.jpg" alt="Foto de electrodomésticos">  -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide hero-img" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="/assets/imgs/electrodomésticos-home.jpg" alt="First slide">
